Feat:write page 챌린지 페이지 글 쓰기

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -38,13 +38,13 @@
 
         <div>
             <label>
-                <input type="date" name="start_date"/>챌린지 시작일 선택
+                <input type="date" name="startDate"/>챌린지 시작일 선택
             </label>
         </div>
 
         <div>
             <label>
-                <input type="date" name="end_date"/>챌린지 종료일 선택
+                <input type="date" name="endDate"/>챌린지 종료일 선택
             </label>
         </div>
 
