Feat: ChallengePost Write 챌린지 포스트 작성

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -22,7 +22,10 @@
 <p>챌린지 종료일</p>
 <div th:text="${challenge.endDate}"></div>
 
-
-<a th:href="@{|/usr/challenge/write/${challenge.id}|}">
+<a href="/usr/challenge/write">
     <button>챌린지 인증하기</button>
 </a>
+
+<!--<a th:href="@{|/usr/challenge/write_form/${challenge.id}|}">-->
+<!--    <button>챌린지 인증하기</button>-->
+<!--</a>-->
