Feat: Challenge and ChallengePost linked 챌린지와 챌린지 포스트 연결

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -22,7 +22,7 @@
 <p>챌린지 종료일</p>
 <div th:text="${challenge.endDate}"></div>
 
-<a href="/usr/challenge/write">
+<a th:href="@{|/usr/challenge/write_form/${challenge.id}|}">
     <button>챌린지 인증하기</button>
 </a>
 
