Feat: ChallengePost Create 챌린지 포스트 생성, 문제해결

--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -9,7 +9,8 @@
   <h2>챌린지 인증 페이지</h2>
 
   <p>챌린지 이름</p>
-  <h1 th:text="${challenge}"></h1>
+  <!-- FIXME -->
+<!--  <h1 th:text="${challenge.challengeName}"></h1>-->
   <form method="post">
 
     <div>
