Feat: ChallengePostList Print 챌린지 디테일 페이지에 포스트 리스트 출력

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -26,6 +26,22 @@
     <button>챌린지 인증하기</button>
 </a>
 
-<!--<a th:href="@{|/usr/challenge/write_form/${challenge.id}|}">-->
-<!--    <button>챌린지 인증하기</button>-->
-<!--</a>-->
+<th:block th:unless="${hasPost}">
+    <div>
+        인증글이 존재하지 않습니다.
+    </div>
+</th:block>
+
+<th:block th:if="${hasPost}">
+    <!-- 인증글 내용 -->
+    <tr th:each="post : ${challengePostList}">
+        <div>
+            <td th:text="${post.postTitle}"></td>
+            <td th:text="${post.postContents}"></td>
+        </div>
+    </tr>
+</th:block>
+
+
+
+<!--<div th:text="${hasPost}"></div>-->
