--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -1,32 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
+<html layout:decorate="~{usr/member/layout.html}">
+
 <head>
-    <meta charset="UTF-8">
-    입
+    <title>로그인</title>
 </head>
+
 <body>
 
-    <h2>로그인</h2>
-    <form method="post">
-        <div>
-            <input type="text" name="loginID" id="loginID" placeholder="Enter email or ID" class="form-control">
-        </div>
+<main layout:fragment="main">
+    <script>
+        function LoginForm__submit(form) {
+            // loginID 이(가) 올바른지 체크
 
-        <div>
-            <input type="text" name="password" id="password" placeholder="Password" class="form-control">
-        </div>
+            form.loginID.value = form.loginID.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
 
-        <div>
-            Forgot Password?
-        </div>
+            if (form.loginID.value.length == 0) {
+                toastWarning('아이디를 입력해주세요.');
+                form.loginID.focus();
+                return;
+            }
 
-        <div>
-            or continue with?
-            <!-- kakao or naver login -->
-        </div>
+            if (form.loginID.value.length < 4) {
+                toastWarning('아이디를 4자 이상 입력해주세요.');
+                form.loginID.focus();
+                return;
+            }
 
-        <input type="submit" value="Login" class="ui-button">
+            // password 이(가) 올바른지 체크
+
+            form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
+
+            if (form.password.value.length == 0) {
+                form.password.focus();
+                toastWarning('비밀번호를 입력해주세요.');
+                return;
+            }
+
+            if (form.password.value.length < 4) {
+                toastWarning('비밀번호를 4자 이상 입력해주세요.');
+                form.password.focus();
+                return;
+            }
+
+            form.submit(); // 폼 발송
+        }
+    </script>
+
+    <form th:action method="POST" class="p-10 flex flex-col gap-4" onsubmit="LoginForm__submit(this); return false;">
+        <div>
+            <input type="text" name="loginID" maxlength="30" placeholder="아이디" class="input input-bordered">
+        </div>
+        <div>
+            <input type="password" name="password" maxlength="30" placeholder="비밀번호" class="input input-bordered">
+        </div>
+        <div>
+            <input type="submit" value="로그인" class="btn btn-primary">
+        </div>
     </form>
-
+</main>
 </body>
+
 </html>
