Feat: PostDetail Page 삭제버튼 이동, 포스트디테일 추가

--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -6,20 +6,6 @@
 
 <body>
 
-<script>
-
-    function wantDelete(postId) {
-        if(confirm('정말로 삭제하시겠습니까?')){
-
-            alert(postId + "번 인증글을 삭제합니다.");
-            location.href="/usr/challenge/delete/" + postId;
-        }else{
-            alert("삭제가 취소되었습니다.");
-        }
-    }
-</script>
-
-
 <p>챌린지 이름</p>
 <h1 th:text="${challenge.challengeName}"></h1>
 
@@ -58,17 +44,12 @@
     <!-- 인증글 내용 -->
     <div th:each="post : ${challengePostList}">
         <div>
-            <td th:text="${post.postTitle}"></td>
+
+            <td>
+                <a th:href="@{|/usr/challenge/postdetail/${post.id}|}" th:text="${post.postTitle}"></a>
+            </td>
+
             <td th:text="${post.postContents}"></td>
-        </div>
-
-        <div>
-            <a th:href="@{|/usr/challenge/modify/${post.id}|}">
-                수정하기
-            </a>
-
-            <button th:onclick="'wantDelete(\'' + ${post.id} + '\')'">삭제하기</button>
-
         </div>
 
     </div>
