Feat: ChallengePost Modify 챌린지 인증 게시물 수정 가능하도록

--- a/src/main/resources/templates/usr/challenge/postdetail.html
+++ b/src/main/resources/templates/usr/challenge/postdetail.html
@@ -28,9 +28,10 @@
     </div>
 
     <div>
-        <button th:href="@{|/usr/challenge/modifypost/${post.id}|}">
+
+        <a th:href="@{|/usr/challenge/modifypost/${post.id}|}">
             수정하기
-        </button>
+        </a>
 
         <button th:onclick="'wantDelete(\'' + ${post.id} + '\')'">삭제하기</button>
 
