--- a/src/main/resources/templates/usr/challenge/modifypost.html
+++ b/src/main/resources/templates/usr/challenge/modifypost.html
@@ -4,9 +4,11 @@
   <title>인증글 수정하기</title>
 </head>
 
+<body>
+
 <div>
 
-  <h2>챌린지 인증 페이지</h2>
+  <h2>인증 수정 페이지</h2>
 
   <p>챌린지 이름</p>
   <h1 th:text="${linkedChallenge.challengeName}"></h1>
@@ -14,7 +16,7 @@
 
     <div>
       <label for="title"> 인증 제목 </label>
-      <input type="text" name="title" id="title" class="form-control" th:text="${post.postTitle}">
+      <input type="text" name="title" id="title" class="form-control" th:value="${post.postTitle}">
     </div>
 
     <div>
@@ -23,15 +25,30 @@
                 th:text="${post.postContents}"></textarea>
     </div>
 
-    <div>
-      <label>
-        <input type="radio" name="status" id="public" value="공개" checked>공개
-        <input type="radio" name="status" id="private" value="비공개">비공개
-      </label>
-    </div>
+    <!-- FIXME 중복 코드 처리 방안 모색 필요-->
+    <th:block th:if="${post.isPublic()}">
+      <div>
+        <label>
+          <input type="radio" name="status" value="공개" checked>공개
+          <input type="radio" name="status" value="비공개">비공개
+        </label>
+      </div>
+    </th:block>
+
+    <th:block th:unless="${post.isPublic()}">
+      <div>
+        <label>
+          <input type="radio" name="status" value="공개">공개
+          <input type="radio" name="status" value="비공개" checked>비공개
+        </label>
+      </div>
+    </th:block>
 
     <input type="submit" value="수정완료" class="ui-button">
   </form>
 
 </div>
+
+</body>
+
 </html>
