--- a/src/main/resources/templates/usr/challenge/detail.html
+++ b/src/main/resources/templates/usr/challenge/detail.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>챌린지 디테일 페이지</title>
+</head>
+
+<body>
+
 <p>챌린지 이름</p>
 <h1 th:text="${challenge.challengeName}"></h1>
 
@@ -34,14 +42,17 @@
 
 <th:block th:if="${hasPost}">
     <!-- 인증글 내용 -->
-    <tr th:each="post : ${challengePostList}">
+    <div th:each="post : ${challengePostList}">
         <div>
-            <td th:text="${post.postTitle}"></td>
+
+            <td>
+                <a th:href="@{|/usr/challenge/postdetail/${post.id}|}" th:text="${post.postTitle}"></a>
+            </td>
+
             <td th:text="${post.postContents}"></td>
         </div>
-    </tr>
+
+    </div>
 </th:block>
 
-
-
-<!--<div th:text="${hasPost}"></div>-->
+</body>
