--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -11,7 +11,7 @@
   <p>챌린지 이름</p>
   <!-- FIXME -->
 <!--  <h1 th:text="${challenge.challengeName}"></h1>-->
-  <form method="post">
+  <form method="post" th:action="@{/usr/challenge/write_form/${post.id}}">
 
     <div>
       <label for="title"> 인증 제목 </label>
