Design: Simple Join design + font 회원가입 프론트 디자인 설정 및 폰트 설정

--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -1,4 +1,4 @@
-<html>
+<html data-theme="lemonade" lang="ko">
 
 <head>
 
@@ -11,6 +11,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <link rel="stylesheet" href="https://jhs512.github.io/toastr/toastr.css">
+
+    <!-- 폰트어썸 아이콘 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- 아이콘 목록 : https://fontawesome.com/search?o=r&m=free -->
 
     <script>
         toastr.options = {
@@ -42,18 +46,18 @@
 
     <style>
         @font-face {
-            font-family: 'GmarketSansMedium';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+            font-family: 'NanumSquare';
+            src: url('https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css') format('sans-serif');
             font-weight: normal;
             font-style: normal;
         }
 
         html > body {
-            font-family: "GmarketSansMedium";
+            font-family: 'NanumSquare';
             text-underline-position: under;
         }
     </style>
-
+    <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">DevChall</title>
 </head>
 
 <body>
