--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{usr/member/layout.html}">
+<html layout:decorate="~{usr/member/layout.html}" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <title>회원가입</title>
@@ -89,52 +89,55 @@
         }
     </script>
 
-    <form th:action method="POST" class="p-10 flex flex-col gap-4" onsubmit="JoinForm__submit(this); return false;">
+    <form th:action method="POST" class="p-10 flex flex-col gap-4 flex-center" onsubmit="JoinForm__submit(this); return false;">
+        <th:block th:if="true">
+            <div class="form-control">
+                <label class="label">
+                    <span class ="loginID"> 사용하실 아이디를 입력해주세요</span></label>
+                <input type="text" name="loginID" maxlength="15" placeholder="loginID" class="input input-bordered w-full max-w-xs" id="loginID" autofocus/>
+            </div>
 
-        <!-- id input -->
-        <div class="input__block">
-            <label for="loginID"> 사용하실 아이디를 입력해주세요 </label>
-            <input type="text" name="loginID" maxlength="15" placeholder="loginID" class="input" id="loginID" />
+            <div class="form-control">
+                <label class="label">
+                    <span class="label-text">본인 이름을 입력해 주세요</span>
+                </label>
+            <input type="text" name="username" maxlength="15" placeholder="이름" class="input input-bordered w-full max-w-xs" id="username" />
+            </div>
+
+            <div class="form-control">
+            <label class="label">
+                <span class="label-text">사용하실 닉네임을 입력해주세요(1~15자)</span>
+            </label>
+            <input type="text" name="nickname" maxlength="15" placeholder="별명 (1~15자)" class="input input-bordered w-full max-w-xs" id="nickname" />
+            </div>
+
+        <div class="form-control">
+            <label class="label">
+                <span class="label-text">사용하실 이메일 주소를 입력해주세요</span>
+            </label>
+        <input type="text" name="email" maxlength="30" placeholder="이메일" class="input input-bordered w-full max-w-xs" id="email" /><br>
         </div>
-        <!-- Nickname input -->
-        <div class="input__block">
-            <label for="username"> 사용하실 이름을 입력해주세요 </label>
-            <input type="text" name="username" maxlength="15" placeholder="nickname" class="input" id="username" />
-        </div>
 
-        <!-- Nickname input -->
-        <div class="input__block">
-        <label for="nickname"> 사용하실 닉네임을 입력해주세요 </label>
-        <input type="text" name="nickname" maxlength="15" placeholder="nickname" class="input" id="nickname" />
-    </div>
+            <div class="form-control">
+                <label class="label">
+                    <span class="label-text">사용하실 비밀번호를 입력해주세요.</span>
+                </label>
+                <input type="password" name="password" maxlength="30" placeholder="비밀번호" class="input input-bordered w-full max-w-xs" id="password" />
+            </div>
 
-        <!-- email input -->
-        <div class="input__block">
-        <label for="email"> 사용하실 이메일 주소를 입력해주세요 </label>
-        <input type="text" name="email" maxlength="30" placeholder="email" class="input" id="email" /><br>
-    </div>
+            <div class="form-control">
+                <label class="label">
+                    <span class="label-text">사용하실 비밀번호를 한 번 더 입력해주세요.</span>
+                </label>
+                <input type="password" name="repeatPassword" maxlength="30" placeholder="비밀번호 확인" class="input input-bordered w-full max-w-xs" id="repeatPassword" />
+            </div>
 
-        <!-- password input -->
-        <div class="input__block">
-        <label for="password"> 사용하실 비밀번호를 입력해주세요. </label>
-        <input type="text" name="password" maxlength="30" placeholder="password" class="input" id="password" />
-    </div>
-
-        <!-- repeat password input -->
-        <br><div class="input__block">
-        <label for="repeatPassword"> 사용하실 비밀번호를 한 번 더 입력해주세요. </label>
-        <input type="text" name="repeatPassword" maxlength="30" placeholder="repeatPassword" class="input" id="repeatPassword" />
-    </div>
-
-        <!-- sign in button -->
-        <br><button type="submit">
-        회원가입하기
-    </button>
-    </form>
-
-    <!— separator —>
+            <button id="btn-join-1" class="btn btn-md btn-primary btn-success gap-3">
+                <span>회원가입</span>
+            </button>
+        </th:block>
     <div class="separator">
-        <p>OR</p>
+        <p>SNS계정으로 간편 회원가입</p>
     </div>
 
     <!— naver button —>
