Design: Join front 기반 완성

--- a/src/main/resources/templates/usr/member/layout.html
+++ b/src/main/resources/templates/usr/member/layout.html
@@ -60,12 +60,12 @@
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">DevChall</title>
 </head>
 
-<body>
+<body class="bg-[#121212] text-white min-h-screen flex">
 
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
 <script src="https://cdn.tailwindcss.com"></script>
 
-<main layout:fragment="main"></main>
+<main layout:fragment="main" class="flex-1"></main>
 
 </body>
 
