--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -9,9 +9,8 @@
   <h2>챌린지 인증 페이지</h2>
 
   <p>챌린지 이름</p>
-
+  <!-- FIXME -->
   <form method="post" th:action="@{|/usr/challenge/write_form/${challenge.id}|}">
-
 
     <div>
       <label for="title"> 인증 제목 </label>
