--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<html layout:decorate="~{usr/member/layout.html}" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>DevChallenge</title>
 </head>
 <body>
-<div>
-    <a href="usr/member/login">
-        <button>로그인</button>
+<main layout:fragment="main" class="flex flex-col w-full">
+    <div>
+        <a href="usr/member/login">
+            <button>로그인</button>
+        </a>
+        <a href="usr/member/join">
+            <button>회원가입</button>
+        </a>
+    </div>
+    <h3>인덱스 페이지 입니다</h3>
+    <a href="usr/challenge/create">
+        <button>챌린지 생성하기</button>
     </a>
-    <a href="usr/member/join">
-        <button>회원가입</button>
-    </a>
-</div>
-<h3>인덱스 페이지 입니다</h3>
-<a href="usr/challenge/create">
-  <button>챌린지 생성하기</button>
-</a>
 
-<a href="usr/challenge/list">
-    <button>챌린리 리스트</button>
-</a>
+    <a href="usr/challenge/list">
+        <button>챌린리 리스트</button>
+    </a>
+</main>
+
 
 </body>
 </html>
