--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -103,7 +103,7 @@
                                 <label class="label">
                                     <span class="text-gray-400">아이디를 입력해주세요</span>
                                 </label>
-                                <input type="text" name="loginID" maxlength="15" placeholder="아이디" class="input input-bordered w-full" id="loginID" autofocus />
+                                <input type="text" name="loginID" maxlength="15" placeholder="아이디" class="input input-bordered w-full text-black" id="loginID" autofocus />
                             </div>
                         </div>
                         <div>
@@ -111,7 +111,7 @@
                                 <label class="label">
                                     <span class="text-gray-400">성명을 입력해 주세요</span>
                                 </label>
-                                <input type="text" name="username" maxlength="15" placeholder="성명" class="input input-bordered w-full" id="username" />
+                                <input type="text" name="username" maxlength="15" placeholder="성명" class="input input-bordered w-full text-black" id="username" />
                             </div>
                         </div>
                         <div>
@@ -119,7 +119,7 @@
                                 <label class="label">
                                     <span class="text-gray-400">닉네임을 입력해주세요(1~15자)</span>
                                 </label>
-                                <input type="text" name="nickname" maxlength="15" placeholder="별명 (1~15자)" class="input input-bordered w-full" id="nickname" />
+                                <input type="text" name="nickname" maxlength="15" placeholder="별명 (1~15자)" class="input input-bordered w-full text-black" id="nickname" />
                             </div>
                         </div>
                         <div>
@@ -127,7 +127,7 @@
                                 <label class="label">
                                     <span class="text-gray-400">이메일 주소를 입력해주세요</span>
                                 </label>
-                                <input type="text" name="email" maxlength="30" placeholder="이메일" class="input input-bordered w-full" id="email" /><br>
+                                <input type="text" name="email" maxlength="30" placeholder="이메일" class="input input-bordered w-full text-black" id="email" /><br>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 <label class="label">
                                     <span class="text-gray-400">비밀번호를 입력해주세요</span>
                                 </label>
-                                <input type="password" name="password" maxlength="30" placeholder="비밀번호" class="input input-bordered w-full" id="password" />
+                                <input type="password" name="password" maxlength="30" placeholder="비밀번호" class="input input-bordered w-full text-black" id="password" />
                             </div>
                         </div>
                         <div>
@@ -145,16 +145,15 @@
                                 <label class="label">
                                     <span class="text-gray-400">비밀번호를 한 번 더 입력해주세요</span>
                                 </label>
-                                <input type="password" name="repeatPassword" maxlength="30" placeholder="비밀번호 확인" class="input input-bordered w-full" id="repeatPassword" />
+                                <input type="password" name="repeatPassword" maxlength="30" placeholder="비밀번호 확인" class="input input-bordered w-full text-black" id="repeatPassword" />
                             </div>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="flex flex-col justify-center mt-[20px]">
-                    <button id="btn-join-1" class="btn btn-md btn-primary btn-success gap-3">
-                        <span>회원가입</span>
+                    <button id="btn-join-1" class="btn btn-md btn-accent gap-3">
+                        <span class="text-white" style="font-size: 17px;">회원가입</span>
                     </button>
                 </div>
 
