--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -1,53 +1,89 @@
+<html layout:decorate="~{usr/member/layout.html}" xmlns="http://www.w3.org/1999/html">
+
 <head>
     <meta charset="UTF-8">
     <title>챌린지 생성 페이지</title>
 </head>
 
-<div>
+<body>
 
-    <h2>챌린지 생성 페이지</h2>
-    <form method="post" th:action="@{/usr/challenge/create}">
-        <div>
-            <label for="title"> 챌린지 제목 </label>
-            <input type="text" name="title" id="title" class="form-control">
-        </div>
+<main layout:fragment="main" class="flex flex-col w-full">
 
-        <div>
-            <label for="contents"> 챌린지 내용 설명 </label>
-            <textarea name="contents" id="contents" class="form-control"></textarea>
-        </div>
+    <!-- FIXME 챌린지별 사진으로 변경-->
+    <div>
+        <img src="/images/logo.png" class="w-[250px] h-[250px]">
+    </div>
+    <div class="flex flex-1">
+        <form method="post" th:action="@{/usr/challenge/create}" class="flex flex-col justify-center items-center w-full">
+            <div class="w-full p-10 lg:w-[65rem]">
+                <p class="text-[25px]">챌린지 생성</p>
+                <div class="flex flex-col gap-4 justify-center lg:flex-row">
+                    <div class="flex flex-col space-y-4  flex-1">
+                        <div>
+                            <div class="w-full">
+                                <label for="title" class="label">
+                                    <span class="text-gray-400">챌린지 제목</span>
+                                </label>
+                                <input type="text" name="title" maxlength="15" placeholder="챌린지명" class="input input-bordered w-full form-control" id="title" autofocus />
+                            </div>
+                        </div>
+                        <div>
+                            <div class="w-full">
+                                <label class="label">
+                                    <!-- 공개여부 UI 재설정 필요-->
+                                    <span class="">공개 여부</span>
+                                </label>
+                                <input type="radio" name="status" id="public" value="공개" checked>공개
+                                <input type="radio" name="status" id="private" value="비공개">비공개
+                            </div>
+                        </div>
 
-        <div>
-            <label>
-            <input type="radio" name="status" id="public" value="공개" checked>공개
-            <input type="radio" name="status" id="private" value="비공개">비공개
-            </label>
-        </div>
+                        <h3>챌린지 이미지는 일단 보류</h3>
 
-        <h3>챌린지 이미지는 일단 보류</h3>
+                        <div>
+                            <div class="w-full">
+                                <label class="label">
+                                    <!-- 인증 주기 UI 재설정 필요-->
+                                    <span class="text-gray-400">챌린지 주기를 선택해 주세요</span>
+                                </label>
+                                <input type="radio" name="frequency" value="day1" checked>주 1회
+                                <input type="radio" name="frequency" value="day3">주 3회
+                                <input type="radio" name="frequency" value="day7">매일(주 7회)
+                            </div>
+                        </div>
+                        <div>
+                            <div class="w-full">
+                                <label class="label">
+                                    <span class="text-gray-400">챌린지 시작일 선택</span>
+                                </label>
+                                <input type="date" name="startDate"/>챌린지 시작일 선택
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col space-y-4 flex-1">
+                        <div>
+                            <div class="w-full">
+                                <label class="label">
+                                    <span class="text-gray-400">챌린지 종료일 선택</span>
+                                </label>
+                                <input type="date" name="endDate"/>챌린지 종료일 선택
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-        <div>
-            <label>
-                <input type="radio" name="frequency" value="day1" checked>주 1회
-                <input type="radio" name="frequency" value="day3">주 3회
-                <input type="radio" name="frequency" value="day7">매일
-            </label>
-        </div>
+                <div class="flex flex-col justify-center mt-[20px]">
+                    <input type="submit" value="생성완료" class="btn btn-md btn-primary btn-success gap-3">
+                    <!--          <button id="btn-join-1" class="btn btn-md btn-primary btn-success gap-3">-->
+                    <!--            <span>회원가입</span>-->
+                    <!--          </button>-->
+                </div>
 
-        <div>
-            <label>
-                <input type="date" name="startDate"/>챌린지 시작일 선택
-            </label>
-        </div>
+            </div>
+        </form>
+    </div>
+</main>
 
-        <div>
-            <label>
-                <input type="date" name="endDate"/>챌린지 종료일 선택
-            </label>
-        </div>
+</body>
 
-        <input type="submit" value="생성완료" class="ui-button">
-    </form>
-
-</div>
 </html>
