--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -156,11 +156,14 @@
                         <span class="text-white" style="font-size: 17px;">회원가입</span>
                     </button>
                 </div>
-
+                <div class="flex justify-center mt-[20px]">
+                    <label class="label">
+                        <span class="text-gray-400">SNS로 회원가입 하기</span>
+                    </label>
+                </div>
                 <div class="mt-[20px] flex justify-center space-x-6">
                     <img src="/images/naver-icon.png" class="w-[50px] h-[50px]">
-                    <img src="/images/naver-icon.png" class="w-[50px] h-[50px]">
-                    <img src="/images/naver-icon.png" class="w-[50px] h-[50px]">
+                    <img src="/images/kakao-icon.png" class="w-[50px] h-[50px]">
                 </div>
             </div>
         </form>
