Design: body color 변경

--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<main layout:fragment="main" class="flex flex-col w-full">
+<main layout:fragment="main" body class="bg-[#121212] text-white flex flex-col w-full">
     <script>
         function JoinForm__submit(form) {
             // loginID 이(가) 올바른지 체크
