--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<main layout:fragment="main" class="flex flex-col w-full">
+<main layout:fragment="main" body class="bg-[#121212] text-white flex flex-col w-full">
     <script>
         function LoginForm__submit(form) {
             // loginID 이(가) 올바른지 체크
